Fix wrong alignment of Pulsing Dot component

--- a/app/components/ui/pulsing-dot/styles.scss
+++ b/app/components/ui/pulsing-dot/styles.scss
@@ -12,7 +12,7 @@
 	left: 50%;
 	margin-left: -20px 0 0 -20px;
 	position: absolute;
-	top: 63px;
+	top: 69px;
 	transform: translate3d( 0, 0, 0 );
 	vertical-align: middle;
 	width: 6px;
